--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -203,7 +203,8 @@
     <div class="space-y-6">
       <div *ngFor="let review of product.comments" class="border-b pb-6">
         <div class="flex items-center gap-4 mb-4">
-          <img src="assets/images/avatar.svg" [alt]="review.userName" class="w-12 h-12 rounded-full object-cover" />
+          <img src="assets/images/avatars/{{review.userAvatar}}.png" [alt]="review.userName"
+            class="w-12 h-12 rounded-full object-cover" />
           <div>
             <h4 class="font-semibold">{{ review.userName }}</h4>
             <div class="flex text-yellow-400">
