multiple UI fixes, trending products api integrated, about us insta buton, review count fix

--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -45,6 +45,12 @@
                             story,
                             or a memory and is then crafted with care.
                         </p>
+                        <div class="mt-6">
+                            <a href="https://www.instagram.com/ashwiniabhang/?igshid=ZDdkNTZiNTM%3D" target="_blank"
+                                rel="noopener noreferrer" class="btn-primary">
+                                <i class="fab fa-instagram mr-2"></i> Follow on Instagram
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
