--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -44,7 +44,15 @@
           </div>
 
           <div class="text-right">
-            <p class="font-semibold">₹{{item.price * item.quantity | number:'1.2-2'}}</p>
+            <ng-container *ngIf="item.originalPrice">
+              <p class="font-semibold text-primary">₹{{item.price * item.quantity | number:'1.2-2'}}</p>
+              <p class="text-sm text-gray-400 line-through">₹{{item.originalPrice * item.quantity | number:'1.2-2'}}</p>
+              <p class="text-xs text-green-600">Save ₹{{(item.originalPrice - item.price) * item.quantity |
+                number:'1.2-2'}}</p>
+            </ng-container>
+            <ng-container *ngIf="!item.originalPrice">
+              <p class="font-semibold">₹{{item.price * item.quantity | number:'1.2-2'}}</p>
+            </ng-container>
           </div>
         </div>
       </ng-container>
