password reset changes

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -33,7 +33,7 @@
       </button>
 
       <p class="text-center text-sm text-gray-600">
-        <a routerLink="/auth/forgot-password" class="text-primary hover:underline">
+        <a routerLink="/forgot-password" class="text-primary hover:underline">
           Forgot your password?
         </a>
       </p>
@@ -59,7 +59,7 @@
     <!-- Register Link -->
     <p class="text-center mt-6 text-gray-600">
       Don't have an account?
-      <a routerLink="/auth/register" class="text-primary hover:underline">
+      <a routerLink="/register" class="text-primary hover:underline">
         Sign up
       </a>
     </p>
