--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,13 +1,14 @@
 <div class="product-card group">
   <div class="relative overflow-hidden">
     <img [src]="product.mainImageLink?.imageLink" [alt]="product.name" class="w-full h-64 object-cover" />
+    <button (click)="toggleWishlist(product)"
+      class="absolute top-3 right-3 w-8 h-8 rounded-full bg-white/90 flex items-center justify-center shadow-md transition-all transform hover:scale-110 z-10"
+      [class.text-red-500]="isInWishlist(product.id)" [class.text-gray-400]="!isInWishlist(product.id)">
+      <i class="fa-heart" [class.fas]="isInWishlist(product.id)" [class.far]="!isInWishlist(product.id)"></i>
+    </button>
     <div
       class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
       <button [routerLink]="['/product', product.id]" class="btn-primary mx-2">Quick View</button>
-      <button (click)="toggleWishlist(product)" class="text-white">
-        <i class="fas" [class.fa-heart]="isInWishlist(product.id)" [class.fa-heart-o]="!isInWishlist(product.id)"
-          [class.text-red-500]="isInWishlist(product.id)" [class.text-white]="!isInWishlist(product.id)"></i>
-      </button>
     </div>
   </div>
   <div class="p-4">
