contact us page feature implemented

--- a/src/app/pages/shipping-policy/shipping-policy.component.html
+++ b/src/app/pages/shipping-policy/shipping-policy.component.html
@@ -62,7 +62,7 @@
                 revised estimated date for delivery.</p>
 
             <h2>QUESTIONS ABOUT RETURNS?</h2>
-            <p>If you have questions about returns, please review our <a href="return-policy-url-to-be-replaced">Return
+            <p>If you have questions about returns, please review our <a routerLink="/return-policy">Return
                     Policy</a></p>
 
             <h2>HOW CAN YOU CONTACT US ABOUT THIS POLICY?</h2>
