--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -111,7 +111,7 @@
             </div>
           </div>
           <!-- Product Info -->
-          <div [class]="viewMode === 'grid' ? 'p-4' : 'flex-1 p-4'">
+          <div [class]="viewMode === 'grid' ? 'p-4 flex flex-col flex-1' : 'flex-1 p-4 flex flex-col'">
             <h3 class="text-lg font-semibold mb-2">{{product.name}}</h3>
             <div class="flex items-center mb-2"
               *ngIf="product.averageRating && product.ratingsCount && product.averageRating > 0">
@@ -133,12 +133,13 @@
               </ng-container>
             </div>
             <p *ngIf="viewMode === 'list'" class="text-gray-600 mb-4">
-              {{product.description}}
+              {{product.shortDescription}}
             </p>
-            <button *ngIf="viewMode === 'list'" [routerLink]="['/product', product.id]"
-              class="btn-primary w-full sm:w-auto">
-              Add to Cart
-            </button>
+            <div *ngIf="viewMode === 'list'" class="mt-auto">
+              <button [routerLink]="['/product', product.id]" class="btn-primary w-full sm:w-auto">
+                Add to Cart
+              </button>
+            </div>
           </div>
         </div>
       </div>
