--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -14,7 +14,7 @@
             <p class="fade-in-up delay-1">Thoughtfully handmade, one story at a time</p>
         </div>
         <div class="hero-banner-image fade-in-up delay-2">
-            <img src="assets/images/acu-paper-bag_cropped.png" alt="ACU Signature Packaging">
+            <img src="assets/images/acu-paper-bag_cropped.webp" alt="ACU Signature Packaging">
         </div>
     </section>
 
@@ -25,7 +25,7 @@
             <div class="story-grid">
                 <div class="story-image-column fade-in-up">
                     <div class="image-frame">
-                        <img src="assets/images/avatars/creator.jpeg" alt="Ashwini - Creator of ACU"
+                        <img src="assets/images/avatars/creator.webp" alt="Ashwini - Creator of ACU"
                             class="story-image">
                     </div>
                 </div>
