--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -6,7 +6,7 @@
         <div class="w-24 h-24 rounded-full overflow-hidden relative cursor-pointer group flex-shrink-0"
           (click)="openAvatarModal()">
           <img
-            [src]="'assets/images/avatars/' + (profileForm.get('profile_avatar')?.value || user?.profile_avatar || 'mochi') + '.png'"
+            [src]="'assets/images/avatars/' + (profileForm.get('profile_avatar')?.value || user?.profile_avatar || 'mochi') + '.webp'"
             [alt]="user?.name" class="w-full h-full object-cover" />
           <div
             class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-30 transition-all flex items-center justify-center">
@@ -344,7 +344,7 @@
 
           <div
             class="w-32 h-32 mb-4 rounded-full overflow-hidden border-4 border-white shadow-md group-hover:scale-105 transition-transform duration-200">
-            <img [src]="'assets/images/avatars/' + option.id + '.png'" [alt]="option.name"
+            <img [src]="'assets/images/avatars/' + option.id + '.webp'" [alt]="option.name"
               class="w-full h-full object-cover">
           </div>
 
