--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -21,15 +21,18 @@
 
                 </ul>
             </div>
-            <!-- <div>
+            <div>
                 <h3 class="text-xl font-bold mb-4">Categories</h3>
                 <ul class="space-y-2">
-                    <li><a href="/shop/handmade" class="hover:text-primary">Handmade Crafts</a></li>
-                    <li><a href="/shop/accessories" class="hover:text-primary">Accessories</a></li>
-                    <li><a href="/shop/apparel" class="hover:text-primary">Apparel</a></li>
-                    <li><a href="/shop/home-decor" class="hover:text-primary">Home Decor</a></li>
+                    <li><a routerLink="/collections/personalized-dolls" class="hover:text-primary">Personalized
+                            Dolls</a></li>
+                    <li><a routerLink="/collections/home-decor" class="hover:text-primary">Home Decor</a></li>
+                    <li><a routerLink="/collections/ahirus-stationery" class="hover:text-primary">Artistic
+                            Stationery</a></li>
+                    <li><a routerLink="/collections/invites-sketches" class="hover:text-primary">Invites & Sketches</a>
+                    </li>
                 </ul>
-            </div> -->
+            </div>
             <div>
                 <h3 class="text-xl font-bold mb-4">Connect With Us</h3>
                 <div class="flex space-x-4 mb-4">
