--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="flex items-center justify-between h-20">
       <!-- Logo -->
       <div class="flex-shrink-0">
-        <h1 class="text-2xl font-bold text-primary" [routerLink]="'/'">ACU</h1>
+        <span class="text-2xl font-bold text-primary cursor-pointer" [routerLink]="'/'">ACU</span>
       </div>
 
       <!-- Search Bar -->
